--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
 runtime: python
 env: flex
-entrypoint: streamlit run --server.port 8080 --server.enableCORS false --server.enableXsrfProtection=false --server.enableWebsocketCompression=false app.py
+entrypoint: streamlit run --server.port 8080 --server.enableCORS false --server.enableXsrfProtection=false --server.enableWebsocketCompression=false src/ui/app.py
 
 runtime_config:
   operating_system: ubuntu22
